修改启动注释